tests/rosetta/out/Java/base64-decode-data.error
parse: error[P999]: /workspace/mochi/tests/rosetta/x/Mochi/base64-decode-data.mochi:58:40: unexpected token "-65" (expected "]")
  --> /workspace/mochi/tests/rosetta/x/Mochi/base64-decode-data.mochi:58:40

 58 |   if n >= 65 && n < 91 { return upper[n-65:n-64] }
    |                                        ^

help:
  Parse error occurred. Check syntax near this location.